--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body{
     width: 470px;
     height: 240px;
 }
-.top{
+.kurd{
     color: aqua;
     line-height: 10px;
     letter-spacing: 5px;
@@ -62,4 +62,21 @@ h1{
     width: 180px;
     height: 100vh;
     font-size: 30px;
+}
+.taqana{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.ww{
+    position: fixed;
+    left: -40px;
+    bottom: 0;
+}
+.arvinww{
+    position: fixed;
+    left: -40px;
+    bottom: 40px; 
 }
